<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваше пароль:</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warning_fill_fields">Поля пустые</string>
    <string name="tea">Чай</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="hello_user">
        String hello = String.format("</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s!</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="order">Имя %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>

    <string-array name="optins_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="optins_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>